--- a/src/main/resources/templates/regulatoryform/edit.html
+++ b/src/main/resources/templates/regulatoryform/edit.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center"> Формы </h1>
 	
 		<form th:action="@{/regulatoryform/update/{id} (id=${regulatoryform.id})}" th:object = "${regulatoryform}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id</label>
