--- a/src/main/resources/templates/acthasform/edit.html
+++ b/src/main/resources/templates/acthasform/edit.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center"> ActHasForm </h1>
 	
 		<form th:action="@{/acthasform/update/{id} (id=${acthasform.id})}" th:object = "${acthasform}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id: <span th:text = "*{formId.okudCd}" class="font-weight-bold"> </span></label>
