--- a/src/main/resources/templates/acthasform/insert.html
+++ b/src/main/resources/templates/acthasform/insert.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center"> ActHasForm </h1>
 		
 		<form th:action="@{/acthasform/insert/}" th:object = "${acthasform}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id</label>
