--- a/src/main/resources/templates/formfrequency/insert.html
+++ b/src/main/resources/templates/formfrequency/insert.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center"> Периодичность </h1>
 		
 		<form th:action="@{/formfrequency/insert/}" th:object = "${formfrequency}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id</label>
