--- a/src/main/resources/templates/formhasfrequency/edit.html
+++ b/src/main/resources/templates/formhasfrequency/edit.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center"> FormHasFrequency </h1>
 	
 		<form th:action="@{/formhasfrequency/update/{id} (id=${formhasfrequency.id})}" th:object = "${formhasfrequency}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id</label>
