--- a/src/main/resources/templates/functionalrequirements/insert.html
+++ b/src/main/resources/templates/functionalrequirements/insert.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center"> ФТ </h1>
 		
 		<form th:action="@{/functionalrequirements/insert/}" th:object = "${functionalrequirements}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 				<div >
 				<label>Id</label>
