--- a/src/main/resources/templates/regulatoryact/edit.html
+++ b/src/main/resources/templates/regulatoryact/edit.html
@@ -14,6 +14,9 @@
       <div class="edit">
 		<h1 class = "text-center"> Указания </h1>
 		<form th:action="@{/regulatoryact/update/{id} (id=${regulatoryact.id})}" th:object = "${regulatoryact}" method="POST"> 
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id</label>
