--- a/src/main/resources/templates/relationtype/insert.html
+++ b/src/main/resources/templates/relationtype/insert.html
@@ -15,6 +15,9 @@
 		<h1 class = "text-center">RelationType </h1>
 	
 		<form th:action="@{/relationtype/insert/}" th:object = "${relationtype}" method="POST">
+		<input type="hidden"
+           name="${_csrf.parameterName}"
+           value="${_csrf.token}"/>
 			<fieldset>
 			<div >
 				<label>Id</label>
